# book_store

./: README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml  ruff.toml
alembic/: env.py
alembic/versions/: 329c14804d57_add_seller_database.py  e6388b5c5964_initial_migration.py
src/: main.py
src/config/: connection_db.py  settings.py
src/middlewares/: auth.py
src/models/: books.py  seller.py
src/routers/v1/: auth.py  books.py  sellers.py
src/schemas/: books.py  sellers.py
src/tests/: conftest.py  test_books.py  test_sellers.py
